<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scoreboard">

    <TextView
        android:id="@+id/PcounterForFirstPlayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleForFirstPlayer" />

    <TextView
        android:id="@+id/PcounterForSeconedPlayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimaryDark"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintTop_toBottomOf="@+id/titleForSeconedPlayer" />

    <TextView
        android:id="@+id/titleForFirstPlayer"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/player_1"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintEnd_toStartOf="@+id/titleForSeconedPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleForSeconedPlayer"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/player_2"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleForFirstPlayer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conterFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/firstconter"
        android:textColor="@android:color/white"
        android:textSize="180sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintEnd_toStartOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintTop_toBottomOf="@+id/PcounterForFirstPlayer"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/conterSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seconedconter"
        android:textColor="@android:color/white"
        android:textSize="180sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintEnd_toStartOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintTop_toBottomOf="@+id/PcounterForSeconedPlayer"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/setingBtn"
        android:layout_width="42dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/coustom_seting"
        app:layout_constraintBottom_toBottomOf="@+id/titleForSeconedPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/titleForSeconedPlayer"
        app:layout_constraintTop_toTopOf="@+id/titleForSeconedPlayer" />

    <Button
        android:id="@+id/restBTN"
        android:layout_width="52dp"
        android:layout_height="41dp"
        android:background="@drawable/rest_icon2_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/titleForFirstPlayer"
        app:layout_constraintEnd_toEndOf="@+id/titleForFirstPlayer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="195dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2106840987538321/5735035690"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>